--- a/templates/base.html
+++ b/templates/base.html
@@ -6,25 +6,33 @@
             .error {
                 color: red;
             }
+
+            h1 {
+                text-align: center;
+            }
+
+            nav {
+                display: flex;
+                justify-content: space-around;
+            }
+
+            form {
+                justify-content: : flex-start;
+            }
         </style>
+        
     </head>
 <body>
 
-    <div>
+    <nav>
         <a href='/'>Main Blog Page</a>
-        <a href='/logout'>Add a Blog Entry</a>
+        <a href='/newpost'>Add a Blog Entry</a>
         
-    </div>
-
-    {% with messages = get_flashed_messages(with_categories=True) %}
-        <ul>
-        {% for category,message in messages %}
-            <li></li>
-        {% endfor %}
-        </ul>
-    {% endwith %}
-
+    </nav>
+    
     {% block content %}
+
+
     {% endblock %}
 
 </body>
