--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             }
 
             form {
-                justify-content: : flex-start;
+                justify-content:flex-start;
             }
         </style>
         
