--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -9,19 +9,19 @@
     <tbody>
       <tr>
         <td>
-          <label for='text'>Title for you new blog:</label>
+          <label for='blog_name'>Title for you new blog:</label>
         </td>
         <td>
-          <input type='text' name='title'>
+          <input name='blog_name' type='text'>
           <span class='error'>{{title_error}}</span>
         </td>
       </tr>
       <tr>
         <td>
-          <label for='entry'>Your new blog:</label> 
+          <label for='blog_entry'>Your new blog:</label> 
         </td>
         <td>
-            <textarea name='entry' rows="10" cols="50"></textarea>
+            <textarea name='blog_entry' rows="10" cols="50"></textarea>
             <span class='error'>{{entry_error}}</span>
         </td>
       </tr>
