--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Build a Blog</h1>
+
+<h1>{{title}}</h1>
+
+<h1>{{blog_title}}</h1>
+<p>{{blog_entry}}</p>
+
 
     
 
