finished up rendering final templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
                 color: red;
             }
 
-            h1 {
+            .center_large {
                 text-align: center;
             }
 
