--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,11 +2,15 @@
 
 {% block content %}
 
-<h1>{{title}}</h1>
+<h1 class='center_large'>{{title}}</h1>
 
-<h1>{{blog_title}}</h1>
-<p>{{blog_entry}}</p>
-
+{% for blog in bloglist: %}
+    <h1>
+        <a href='/postblog?id={{blog.id}}'>{{blog.title}}</a>
+    </h1>
+    <p>{{blog.body}}</p>
+    <hr>
+{% endfor %}
 
     
 
