--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
     <head>
         <title>{{title}}</title>
         <style>
-            .error {
+            .flashes {
                 color: red;
             }
 
@@ -26,10 +26,36 @@
 
     <nav>
         <a href='/'>Main Blog Page</a>
-        <a href='/newpost'>Add a Blog Entry</a>
+        <a href='/'>Add a Blog Entry</a>
+
+        <div style='float: right'>
+            {% if 'email' in session %}
+              {{ session['email'] }}
+              <form action="/logout" method="post" id='logout'>
+                <input type="submit" value="Log Out" />
+              </form>
+            {% else %}
+              <a href="login">login</a> | <a href="signup">create account</a>
+            {% endif %}
+          </div>
         
     </nav>
-    
+
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul class=flashes>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+    {% endwith %}
+
+
+
+
+
+
     {% block content %}
 
 
