--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 
 <h2>Register New Account</h2>
 <form action="/signup" method="post">
-  <p><label>Email <input type="text" name="email"/></label></p>
+  <p><label>Username <input type="text" name="username"/></label></p>
   <p><label>New Password <input type="password" name="password"/></label></p>
   <p><label>Verify Password <input type="password" name="verify"/></label></p>
   <p><input type="submit" value="Signup"/></p>
