--- a/templates/blog.html
+++ b/templates/blog.html
@@ -13,7 +13,7 @@
 
     
     
-    <em>Written by <a href='/usersposts?user_id={{blog.owner.id}}'>{{blog.owner.username}}</a></em>  
+    <em>Written by <a href='/usersposts?user={{blog.owner.username}}'>{{blog.owner.username}}</a></em>  
     
 
     <hr>
