--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,8 @@
 <body>
 
     <nav>
-        <a href='index'>Home</a>
-        <a href="/">All Posts</a>
+        <a href='/'>Home</a>
+        <a href="/blog">All Posts</a>
         <a href="newpost">Create New Post</a>
 
         <div style='float: right'>
@@ -51,10 +51,6 @@
       </ul>
     {% endif %}
     {% endwith %}
-
-
-
-
 
 
     {% block content %}
