--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 {% for user in user_list %}
     <ul>
-        <li><a href='/usersposts?user={{user.username}}'>{{user.username}}</a></li>
+        <li><a href='/blog?user={{user.username}}'>{{user.username}}</a></li>
         
     </ul>
 {% endfor %}
